public/css/style.css
* {
  box-sizing: border-box;
  font-family: "Helvetica Neue", Helvetica, sans-serif;
}

.container {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.applicant-header-container{
  width: 300px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}



.applicant-header-container a {
  border: 1px solid #dddddd;
  border-radius: 10px;
  padding: 6px 12px;
  color: #000000;
}

.error-text {
  color: #FF0000;
}

a {
  text-decoration: none;
  color: #337ab7;
}
a:hover {
  color: #000000;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header .icons {
  display: flex;
  justify-content: flex-start;
  gap: 10px;
}

header .icons a {
  text-align: center;
  padding: 5px;
}

header .icons a:hover {
  background-color: #dddddd;
  border-radius: 5px;
}

header .logo {
  width: 300px;
}

header .logo img {
  max-width: 100%;
}

nav {
  display: flex;
}

nav.container {
  margin-top: 20px;
  margin-bottom: 30px;
}

nav a {
  border: 1px solid #dddddd;
  border-left: none;
  padding: 6px 12px;
  color: #000000;
}

nav a:hover {
  background-color: #dddddd;
}

.applicant-header-container a:hover {
  background-color: #dddddd;
}

nav a:first-child {
  border: 1px solid #dddddd;
}

.titleLink {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

form .form-group {
  margin-bottom: 10px;
}

form .form-group label {
  display: block;
  margin-bottom: 10px;
}

form .form-group input{
  width: 100%;
  margin-bottom: 10px;
}

form .form-group textarea{
  width: 100%;
  margin-bottom: 10px;
}

form .form-group select{
  width: 100%;
  margin-bottom: 10px;
  padding: 5px;
}

.width-20{
  width: 20px;
}

.input-width-full{
  width: 100%;
}

.input-width-700{
  width: 700px;
}

table {
  width: 100%;
  border: 1px solid #dddddd;
  border-collapse: collapse;
}

table th, table td {
  border: 1px solid #dddddd;
  padding: 8px;
}

table thead {
  text-align: left;
}

.pagination {
  display: flex;
  margin-top: 30px;
}

.pagination a {
  padding: 5px;
  border: 1px solid #dddddd;
  border-left: none;
  color: #333333;
}

.pagination a.prev {
  border: 1px solid #dddddd;
}

.pagination a.disabled {
  pointer-events: none;
  cursor: default;
  color: #dddddd;
}

.pagination a.active {
  background-color: #5FFFB4;
}

.btn {
  background-color: #5FFFB4;
  padding: 8px;
  border: none;
  border-radius: 4px;
  font-size: 15px;
}

.btn-width{
  width: 140px;
}

.btn:hover {
  background-color: rgb(0, 248, 131.75);
}

.single-applicant .applicant-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.single-applicant .details h2 {
  color: #743DFB;
}

.single-applicant .details p span {
  font-weight: bold;
}

.applicationInfo {

}

.login {
  margin-top: 10px;
}

.login section {
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
  padding: 15px;
  border-radius: 10px;
  background-color: #dddddd;
}

.login section form label {
  display: block;
  margin-bottom: 5px;
  font-weight: bold;
}

.login section form input[type=email], .login section form input[type=password] {
  width: 100%;
  margin-bottom: 15px;
}

.login section form .invalid-login {
  margin-top: 10px;
}

.admin .links {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 20px;
}

.admin .links a {
  padding: 50px 20px;
  border: 2px solid #337ab7;
  border-radius: 5px;
  text-align: center;
}

.admin .links a:hover {
  background-color: #dddddd;
  color: #337ab7;
}

@media screen and (max-width: 768px) {
  header {
    flex-direction: column-reverse;
  }

  .admin .links {
    grid-template-columns: 1fr;
  }
}


td:has(> .edit-button) {
  position: relative;
}

.edit-button {
  top: 50%;
  transform: translateY(-50%);
  position: absolute;
  padding: 0.25rem;
  border-radius: 0.25rem;
  background-color: #c83e6a;
  color: white;
  font-weight: bold;
  font-size: 0.75rem;
  transition: all 0.1s linear;
  box-shadow: 0 0 0 0 rgb(0,0,0);
}
.edit-button:hover {
  background-color: mediumpurple;
  box-shadow: 0.1rem 0.1rem 0.1rem 0 rgb(0,0,0);
  color: white;
  cursor: pointer;
  transform: scale(1.05) translate(-10%, -60%);
}

